Fixed code block spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -149,6 +149,7 @@ pre {
   color: hsl(0, 0%, 73%);
 
   pre {
+    margin: 0;
     padding: 25px;
   }
 }
